--- a/notebooks/gaussian_example.ipynb
+++ b/notebooks/gaussian_example.ipynb
@@ -526,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "diffusion-smc",
+   "display_name": "{ENV_NAME}",
    "language": "python",
    "name": "python3"
   },
@@ -540,14 +540,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.21"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "2dceb6ab8bb361339e54cadb0db25802529f4a5ce8453486a2c9002a89b6ea19"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
